# AdventOfCode2022

./: .flake8  Dockerfile  pyproject.toml
.github/workflows/: ci.py  ci.yml
day_01/: main.py
day_02/: main.py
day_03/: main.py  test_main.py
day_04/: __init__.py  main.py  test_main.py
day_05/: main.py  test_main.py
day_06/: main.py  test_main.py
day_07/: __init__.py  main.py  test_main.py
day_08/: main.py  test_main.py
day_09/: main.py  test_main.py
day_1/: main.py
day_10/: __init__.py  main.py  test_main.py
day_11/: __init__.py  main.py  test_main.py
day_12/: main.py  test_main.py
day_2/: main.py
day_3/: __init__.py  day3.py  main.py  test_day3.py  test_main.py
day_4/: main.py  test_day4.py  test_main.py
day_5/: __init__.py  main.py  test_main.py
day_5/case/: 1.txt
day_6/: __init__.py  main.py  test_main.py
day_7/: main.py  test_main.py
day_8/: __init__.py  main.py  test_main.py
day_9/: __init__.py  main.py  test_main.py
